--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,10 @@ layout: default
 ---
 
 <article class="post">
-  <h1>{{ page.title }}</h1>
+  <h1>
+    {{ page.title }}
+    <div class="date">{{ post.date | date: "%B %e, %Y" }}</div>
+  </h1>
 
   <div class="entry">
     {{ content }}
