--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article class="post">
   <h1>
     {{ page.title }}
-    <div class="date">{{ post.date | date: "%B %e, %Y" }}</div>
+    <div class="date">{{ page.date | date: "%B %e, %Y" }}</div>
   </h1>
 
   <div class="entry">
